edition = "2024";
package kts.scalar;

message Decimal {
  float float_value = 1;
  double double_value = 2;
}

message Integer {
  int32 variable_signed_int32 = 1;
  int64 variable_signed_int64 = 2;
  uint32 variable_unsigned_int32 = 3;
  uint64 variable_unsigned_int64 = 4;
  fixed32 fixed_unsigned_int32 = 5;
  fixed64 fixed_unsigned_int64 = 6;
  sint32 zigzag_signed_int32 = 7;
  sint64 zigzag_signed_int64 = 8;
}

message Logical {
  bool boolean = 1;
}

message Sequence {
  bytes bytes_sequence = 1;
  string chars_sequence = 2;
}